コードレビュー後の修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -151,19 +151,18 @@
               <%= link_to "#" do %>
                 <div class='item-img-content'>
                   <%= image_tag item.image, class: "item-img" %>
-          
-                  <% if item.sold? %>
-                    <div class='sold-out'>
-                      <span>Sold Out!!</span>
-                    </div>
-                  <% end %>
+                  <%# 商品が売れている場合は、sold outを表示しましょう %>
+                  <div class="sold-out">
+                    <span>Sold Out!!</span>
+                  </div>
+                  <%# //商品が売れている場合は、sold outを表示しましょう %>
                 </div>
                 <div class='item-info'>
                   <h3 class='item-name'>
                      <%= item.item_name %>
                   </h3>
                   <div class='item-price'>
-                   <span><%= item.price %>円<br><%= item.shipping_charge %></span>
+                   <span><%= item.price %>円<br><%= item.shipping_charge.name %></span>
                     <div class='star-btn'>
                       <%= image_tag "star.png", class:"star-icon" %>
                       <span class='star-count'>0</span>
