--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -148,7 +148,7 @@
         <% else %>
           <% @items.each do |item| %>
             <li class='list'>
-              <%= link_to "#" do %>
+              <%= link_to item_path(item) do %>
                 <div class='item-img-content'>
                   <%= image_tag item.image, class: "item-img" %>
                   <%# 商品が売れている場合は、sold outを表示しましょう %>
