--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -151,12 +151,12 @@
               <%= link_to item_path(item) do %>
                 <div class='item-img-content'>
                   <%= image_tag item.image, class: "item-img" %>
-                  <%# 商品が売れている場合は、sold outを表示しましょう %>
-                  <div class="sold-out">
-                    <span>Sold Out!!</span>
-                  </div>
-                  <%# //商品が売れている場合は、sold outを表示しましょう %>
-                </div>
+                  <% if item.sold? %>
+                    <div class='sold-out'>
+                      <span>Sold Out!!</span>
+                    </div>
+                  <% end %>
+
                 <div class='item-info'>
                   <h3 class='item-name'>
                      <%= item.item_name %>
