--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -23,13 +23,13 @@
       </span>
     </div>
 
-    <% if user_signed_in? %>
+    <% if user_signed_in? &&  @item.buyer_id.nil? %>
       <% if current_user == @item.user %>
         <%= link_to "商品の編集", edit_item_path(@item), class: "item-red-btn" %>
         <p class="or-text">or</p>
         <%= link_to "削除", item_path(@item), data: {turbo_method: :delete}, class:"item-destroy" %>
-      <% else %>
-        <%= link_to "購入画面に進む", new_item_purchase_history_path(@item), data: { turbo: false }, class:"item-red-btn"%>
+      <% elsif @item.buyer_id.nil? %>
+        <%= link_to "購入画面に進む", item_purchase_histories_path(@item), data: { turbo: false }, class:"item-red-btn"%>
       <% end %>
     <% else %>
       <p><%= @item.item_name %></p>
